# powerbi_commodity_etl

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
notebook/: Switzerland Road Diesel ETL.ipynb
src/powerbi_etl/: cammesa_evolution_report.py  switzerland_road_diesel.py
src/powerbi_etl/utils/: __init__.py  base_classes.py  selenium_tools.py
