[project]
name = "powerbi_etl"
version = "1.0.0"
description = "Automate Power BI Data Extraction with Python Scripting."
keywords = [
    "Python",
    "ETL",
    "Selenium",
    "AWS S3",
    "Power BI",
]
requires-python = ">=3.12"
dependencies = [
    "awswrangler",
    "pandas",
    "pyautogui",
    "selenium",
    "webdriver-manager",
]

[[project.authors]]
name = "Aritra Ganguly"
email = "aritraganguly.in@protonmail.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.scripts]
run_switzerland_road_diesel = "powerbi_etl.switzerland_road_diesel:main"
run_cammesa_etl = "powerbi_etl.cammesa_evolution_report:main"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[dependency-groups]
dev = [
    "memory-profiler",
    "mypy>=1.11.2",
    "python-dotenv",
    "pytest",
    "ruff",
]
lint = ["ruff"]
